<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="change_starts_ntoday">Your Finances Made Simple</string>
    <string name="mysave_premium">MySave Premium</string>
    <string name="subscribe">Subscribe</string>
    <string name="_4_29usd_month">4.29USD/Month</string>
    <string name="_49_99usd_year">49.99USD/year</string>
    <string name="iap_detail">1. All payments made through Play Store are controlled and managed by
        Google.\n2. Payments will be charged to your Play Store Account at confirmation
        of purchase.\n3. Subscription automatically renews, unless auto-renew is turned off at
        least 24 hours before the end of the current period.\n4. Account will be charged for
        renewal within 24 hours prior to the end of the current period.\n5. You may manage your
        subscriptions and auto-renewal may be turned off by going to your Play Store account
        settings after purchase.\n6. Any unused portion of a free trial period, if offered, will
        be forfeited if you purchase a subscription to the publication, where applicable.</string>

    <string name="access_all_features">Access all features</string>
    <string name="remove_ads">Remove Ads</string>
</resources>