<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    app:layout_collapseMode="parallax">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/title_image"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/subscription_cover"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/view_mask"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toTopOf="@id/tvDes"
                        android:layout_marginBottom="@dimen/_5sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:text="@string/change_starts_ntoday"
                        android:textAllCaps="true"
                        android:fontFamily="@font/opensans_bold"
                        android:textColor="@color/colorPrimary"
                        />

                    <TextView
                        android:id="@+id/tvDes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="@dimen/_20sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:text="@string/mysave_premium"
                        android:fontFamily="@font/opensans_extrabold"
                        android:textSize="@dimen/_14ssp"
                        android:textColor="@color/white"/>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imgBack"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:src="@drawable/ic_close"
                        app:tint="@color/md_theme_light_primary"
                        app:layout_collapseMode="pin"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:background="@drawable/rounded_shape_bg"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="-10dp"
                    android:background="@color/transparent"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/_58sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@drawable/bg_top_corner_radius">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_2sdp">

                            <LinearLayout
                                android:id="@+id/llPerMonth"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_5sdp"
                                android:layout_marginEnd="@dimen/_5sdp"
                                android:background="@drawable/btn_bg_round_border_theme"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:paddingStart="@dimen/_12sdp"
                                android:paddingEnd="@dimen/_12sdp"
                                android:paddingVertical="@dimen/_8sdp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <TextView
                                    android:id="@+id/tvMonthlyTitle"
                                    android:fontFamily="@font/opensans_regular"
                                    android:textSize="@dimen/_15ssp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/grayish"
                                    android:text="@string/access_all_features" />

                                <TextView
                                    android:id="@+id/tvMonthlyPrice"
                                    android:textSize="@dimen/_14ssp"
                                    android:fontFamily="@font/opensans_semibold"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/grayish"
                                    android:layout_marginTop="@dimen/_2sdp"
                                    android:text="@string/_4_29usd_month" />

                            </LinearLayout>

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/imgCheckMonthly"
                                android:layout_width="@dimen/_27sdp"
                                android:layout_height="@dimen/_27sdp"
                                android:src="@drawable/ic_check_circle"
                                android:tint="@color/colorPrimary"
                                app:layout_constraintBottom_toBottomOf="@id/llPerMonth"
                                app:layout_constraintEnd_toEndOf="@+id/llPerMonth"
                                app:layout_constraintTop_toTopOf="@id/llPerMonth"
                                android:layout_marginEnd="@dimen/_15sdp"/>

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp">

                            <LinearLayout
                                android:id="@+id/llPerYear"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_5sdp"
                                android:layout_marginEnd="@dimen/_5sdp"
                                android:background="@drawable/btn_bg_round_border_theme"
                                android:backgroundTint="@color/col_999"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:paddingStart="@dimen/_12sdp"
                                android:paddingEnd="@dimen/_12sdp"
                                android:paddingVertical="@dimen/_8sdp"
                                android:layout_marginTop="@dimen/_13sdp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <TextView
                                    android:id="@+id/tvYearlyTitle"
                                    android:fontFamily="@font/opensans_regular"
                                    android:textSize="@dimen/_15ssp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/grayish"
                                    android:text="@string/access_all_features" />

                                <TextView
                                    android:id="@+id/tvYearlyPrice"
                                    android:textSize="@dimen/_14ssp"
                                    android:fontFamily="@font/opensans_semibold"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/grayish"
                                    android:layout_marginTop="@dimen/_2sdp"
                                    android:text="@string/_49_99usd_year" />

                            </LinearLayout>

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/imgCheckYearly"
                                android:layout_width="@dimen/_27sdp"
                                android:layout_height="@dimen/_27sdp"
                                android:src="@drawable/ic_check_circle"
                                android:tint="@color/md_theme_light_primary"
                                android:visibility="gone"
                                app:layout_constraintBottom_toBottomOf="@id/llPerYear"
                                app:layout_constraintEnd_toEndOf="@+id/llPerYear"
                                app:layout_constraintTop_toTopOf="@id/llPerYear"
                                android:layout_marginEnd="@dimen/_15sdp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/bg_green_radius_5"
                                android:backgroundTint="@color/md_blue_400"
                                android:textSize="@dimen/_14ssp"
                                android:paddingTop="@dimen/_2sdp"
                                android:paddingEnd="@dimen/_5sdp"
                                android:paddingBottom="@dimen/_2sdp"
                                android:paddingStart="@dimen/_5sdp"
                                android:layout_marginEnd="@dimen/_30sdp"
                                app:layout_constraintTop_toTopOf="parent"
                                android:textColor="@color/black"
                                app:layout_constraintEnd_toEndOf="@id/llPerYear"
                                android:layout_marginTop="3dp"
                                android:text="Save 67%"/>


                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingTop="@dimen/_10sdp"
                            android:paddingBottom="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawableStart="@drawable/noads"
                               android:textSize="@dimen/_14ssp"
                                android:textColor="@color/black"
                                android:fontFamily="@font/opensans_bold"
                                android:drawablePadding="@dimen/_5sdp"
                                android:text="@string/remove_ads"/>

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/_15sdp"
                            android:paddingEnd="@dimen/_15sdp"
                            android:textSize="@dimen/_11ssp"
                            android:textColor="@color/black"
                            android:fontFamily="@font/raleway_black"
                            android:text="@string/iap_detail"
                            android:layout_marginBottom="@dimen/_5sdp"/>

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/btn_bg_round_theme"
            android:layout_gravity="bottom"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/subscribe"
            android:textStyle="bold"
            android:fontFamily="@font/opensans_bold"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp" />

    </FrameLayout>
</LinearLayout>